Stylesheet/emote/tag updates 2013-08-12

--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -41,6 +41,9 @@ a[href|="/myosotis"]{display:block;clear:none;float:left;width:180px;height:143p
 a[href|="/sweetierarityhug"]{display:block;clear:none;float:left;width:192px;height:200px;background-image:url(%%sweetierarityhug%%)}
 a[href|="/raritysweetiehug"]{display:block;clear:none;float:left;width:220px;height:250px;background-image:url(%%raritysweetiehug%%)}
 a[href|="/alwaysthinkinofyou"]{display:block;clear:none;float:left;width:171px;height:220px;background-image:url(%%alwaysthinkinofyou%%)}
+a[href|="/lbbump"]{display:block;clear:none;float:left;width:150px;height:109px;background-image:url(%%lbbump%%)}
+a[href|="/bonstare"]{display:block;clear:none;float:left;width:268px;height:295px;background-image:url(%%bonstare%%)}
+a[href|="/bonmegastare"]{display:block;clear:none;float:left;width:523px;height:565px;background-image:url(%%bonmegastare%%)}
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
