--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -1,4 +1,4 @@
-div.titlebox span.word{display:none}div.titlebox .subscribers span.number:after{content:" Persecutors"}div.titlebox .users-online span.number:after{content:" are a hatin'"}
+div.titlebox span.word{display:none}div.titlebox .subscribers span.number:after{content:" People"}div.titlebox .users-online span.number:after{content:" Are not acting like rational people"}
 
 /***********************
 *
