--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1830,7 +1830,9 @@ a[href|="/trainbowdash"],
 a[href|="/fsstare"],
 a[href|="/rdthebird"],
 a[href|="/ithappened"],
-a[href|="/bpliver"]
+a[href|="/bpliver"],
+a[href|="/rdalwaysdressesinstyle"],
+a[href|="/thatsnothowyouspellmiggyb"]
 {
     display: block;
     clear: none;
@@ -1889,5 +1891,15 @@ a[href|="/bpliver"]
 {
 	width: 252px;
 	background-position: -0px -700px;
+}
+a[href|="/rdalwaysdressesinstyle"]
+{
+	width: 136px;
+	background-position: -0px -840px;
+}
+a[href|="/thatsnothowyouspellmiggyb"]
+{
+	width: 135px;
+	background-position: -136px -840px;
 }
 /* end sheet 14*/
