--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -118,11 +118,11 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%trixie-hat%%);
- width:70px;
- height:70px;
- margin-top:-45px;
- margin-left:5px;
+ background:url(%%discentia-hat%%);
+ width:60px;
+ height:60px;
+ margin-top:-30px;
+ margin-left:0px;
  margin-bottom:0px;
  margin-right:-40px;
 }
@@ -1216,4 +1216,3 @@ display: none !important;
 .res-nightmode .report-button:hover:before {
     background-color: #000;
 }
-
