--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -29,7 +29,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%pad-footer%%);
+ background-image:url(%%cadancefooter%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
@@ -46,12 +46,12 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  .sidebox.create .morelink {display: none;}
 
 body {
-    background: url('%%padbgfinal2%%') no-repeat fixed right bottom !important;
+    background: url('%%cadancebg2%%') no-repeat fixed right bottom !important;
     background-color:#ffffff !important;
 } 
 
 #header #header-bottom-left {
-   background: url(%%bannerfinal%%) !important;
+   background: url(%%cadanceheader5%%) !important;
    background-repeat: no-repeat !important;
    background-position: 50% 100% !important;
    height: 205px; 
