--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -397,3 +397,12 @@ display: block;
 background-image: url(%%twilightdansen%%);
 float: left
 }
+
+
+a[href|="/twisleep"]{
+width:150px;
+height:100px;
+display: block;
+background-image: url(%%twisleep%%);
+float: left
+}
