--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -565,3 +565,243 @@ a[href|="/vinylimgoingtokillyou"] {
  height: 150px;
  background-image: url(%%vinylimgoingtokillyou%%);
 } 
+
+a[href|="/wynaut"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 185px;
+ height: 150px;
+ background-image: url(%%wynaut%%);
+} 
+
+a[href|="/wynauttrombone"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 285px;
+ height: 150px;
+ background-image: url(%%wynauttrombone%%);
+} 
+
+a[href|="/applejackvilla"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 118px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -1500px;
+} 
+
+a[href|="/arsenalyra"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 107px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -1350px;
+} 
+
+
+a[href|="/babselona"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 87px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -1200px;
+} 
+
+a[href|="/berrysiadrunkmond"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 132px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -1050px;
+} 
+
+a[href|="/bigmachestercity"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 113px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -900px;
+} 
+
+a[href|="/bigmachesterunited"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 113px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -750px;
+} 
+
+a[href|="/bonventus"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 148px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -600px;
+} 
+
+a[href|="/celestic"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 120px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -450px;
+} 
+
+a[href|="/cheerlieesea"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 124px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -300px;
+} 
+
+a[href|="/chrysalispalace"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 114px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -150px;
+} 
+
+a[href|="/derpycounty"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 223px;
+ height: 150px;
+ background-image: url(%%Spritesheet-1%%);
+ background-position: -0px -0px;
+} 
+
+a[href|="/evertavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -0px;
+} 
+
+a[href|="/flutteryid"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 99px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -150px;
+} 
+
+a[href|="/lunapool"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 174px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -300px;
+} 
+
+a[href|="/newcadenceunited"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 188px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -450px;
+} 
+
+a[href|="/queensparklerangers"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -600px;
+} 
+
+a[href|="/raritymadrid"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -750px;
+} 
+
+
+a[href|="/scratchampton"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -900px;
+} 
+
+a[href|="/stokeloo"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 134px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -1050px;
+} 
+
+a[href|="/sweetsea"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 100px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -1200px;
+} 
+
+a[href|="/westbraeburnapplebion"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 164px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -1350px;
+}
+ 
+a[href|="/zecorastzebrasburg"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%Spritesheet-2%%);
+ background-position: -0px -1500px;
+} 
