--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -1,3 +1,72 @@
+/*_______________________________________________¦¦¦¦¦¦¦¦_ 
+____________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦_ 
+___________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦_ 
+_________________________________¦¦¦¦¦__¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+__________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+______________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+___________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+_________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+_______¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+______¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¯¯¯¯¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦___¦?
+??¦¦¦¦¦¦_ 
+_____¦¦¦¦¦¦¦¦¦¦¦¦¯¯___________¯¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦??
+?¦¦¦¦¦_ 
+____¦¦¦¦¦¦¦¦¦¦¦¯_______________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦??
+?¦¦¦¦¦¦ 
+____¦¦¦¦¦¦¦¦¦¦_____________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦¦¦¦¦¦ 
+_____¦¦¦¦¦¦¦¦____________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦¦¦¦¦¦¦ 
+__¦¦_¦¦¦¦¦¦¦___________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦¦¦¦¦¦¦¦¦ 
+_¦¦¦_¦¦¦¦¦¦__________¦__¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦
+¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+¦¦¦¦¦¦¦¦¦¦_________¦¦¦¦¦¦¦¦¦¦¦¦¦¦_¦¦¦¦¦_¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦
+¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+¦¦¦¦¦¦¦¦¦________¯_¦¦¦¦¦¦¦¦¦¦¦_¦¯¦¦¦¦¦¦¯¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+_¦¦¦¦¦¦¦________¯¯_¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦
+¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+___¯¯¯¯__________¯_¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦??
+?¦¦¦¦¦¦¦¦¦¦¦ 
+__________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦___?¦¦¦¦¦¦¦¦¦¦¦¦¦
+¦¦¦¦¦¦¦¦¦ 
+_________________¦¦¦¯¦¦¦¦¦¦¦¦¦¦¯¦¦¦¦¦¦¦¦¦¦¦¦¦¯__?¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦¦¦¦¦¦ 
+__________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¯__¦¦¦¦¦¦¦¦¦¦¦¦¦¦
+¦¦¦¦¦¦¦ 
+___________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦??
+?¦¦¦¦¦ 
+____________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦ 
+_______________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦ 
+_______________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦ 
+_______________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦¦ 
+_______________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦¦¦¦¦ 
+_____________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦
+¦¦¦¦¦¦ 
+______________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦??
+?¦¦¦¦¦ 
+_____________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦?
+??¦ 
+___________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+__________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+_________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+_________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+__________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+___________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+____________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+__________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+_________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+________________________________________¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦¦ 
+_________________________________________¦¦¦¦¦¦¦¦¯¯¯¯¯¯¯ 
+___________________________________________¦¦¦¦¦¦¦¦¦__ 
+______________________________________________¯¯¯¯¯
+*/
 /* 
 |
 |                       VERSION JOKER GOT THIS SHIT?!
@@ -569,6 +638,15 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 | ▀▀▀ ▀ ▀▀▀ ▀   ▀ ▀▀▀  ▀  ▀▀▀ ▀▀▀
 |
 */
+
+/* This goes here because it's sort of an emote. */
+a[href="/spoiler"],a[href="/donttelljoker"],a[href="/HORSLIOR"] {
+    background-color: #000;
+    color: #000;
+    }
+a[href="/spoiler"]:hover,a[href="/donttelljoker"]:hover,a[href="/HORSLIOR"]:hover {
+    color: #fff;
+    }
 
 /* Don't modify the start and stop tags please. -koobaxion */
 
