--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -1,9 +1,10 @@
 /* CSS started Sun, Feb 17th, 1 AM: Asceveris  */
 /* KEEP THE FORMATTING CONSISTENT, DAMN IT */
+/* Sorry for fucking with it Asc. -SMFD */
 
 /* Don't touch. On a side note, I need to consolidate all of these "don't touches" into one block*/  
 div.titlebox span.word {  
-  display: none  
+   display: none  
 }
 
 .redditname a {
@@ -16,30 +17,29 @@ div.titlebox span.word {
   border: 0px solid #000000;
 }
 
-/* This block changes the reddit name to an image. if you want the image to change, upload a new image as title and delete the one that is currently here */
-#header .redditname a {
-  background:url(%%title%%);
-  height: 145px; /* Change this to the height of your image */
-  width: 625px; /* Change this to the width */
-}
-
 #header-bottom-left {
-  height: 145px; /* Height again */
+ /* background:url(%%newbanner%%)!important;
+  background-repeat:no-repeat!important;
+  background-position:50% 100%!important;*/
+  height:237px;
 }
 
-#header .redditname a {
-  text-indent: -90001px;
-}
 
-#header-img-a, .redditname a, .tabmenu {
+#header-img-a {
   display: inline;
   float: left;
 }
 
+.pagename.redditname a {
+  position:absolute;
+  bottom:0%;
+}
+
 .tabmenu {
-  position:relative;
-  top:100%;
-  margin-top:-16px!important;
+  position:absolute;
+  bottom:0%;
+  z-index: 99;
+  left: 11%;
 }
 
 /* Aforementioned block ends here */
@@ -100,15 +100,15 @@ a[href|="/spoiler"]:hover {
 }
 
 #header-img-a {
-  visibility: hidden;
-  height: 0;
-  width: 0;
+  width: 100%;
+  z-index: 400;
+  bottom:0%;
 }
 
 .content:before{
-  content: "DO YOU EVEN SUBSCRIBE";
+  /* content: "DO YOU EVEN SUBSCRIBE";
   margin:4px;
-  color:#FF33FF;
+  color:#FF33FF;*/
 }
 
 .subscriber .content:before{
@@ -212,15 +212,6 @@ h1.redditname:before
   visibility:visible!important;
   content: "In Memory of SaultSpartan 1977-2013"
 }*/
-
-a[href|="/rarrifle"] {
-  background-image: url(%%Rarimote%%);
-  display:block;
-  clear:none;
-  float:left;
-  width: 500px;
-  height: 267px;
-}
 
 a[href|="/aliloo"] {
   background-image: url(%%aliloo%%);
@@ -484,14 +475,6 @@ a[href|="/pwettypwease"] {
   height:150px;
 }
 
-a[href|="/disgusting"] {
-  background-image: url(%%chocolate-ice-cream-cone%%);
-  display:block;
-  clear:none;
-  float:left;
-  width:113px;
-  height:150px;
-}
 
 a[href|="/smfds"] {
   background-image: url(%%SMFdumptrucks%%);
@@ -610,3 +593,11 @@ a[href|="/awakedash"] {
   height:200px;
 }
 
+a[href|="/rarifan"] {
+  background-image: url(%%rarifan%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:425px;
+  height:425px;
+}
