Stylesheet/emote/tag updates 2013-08-20

--- a/source-css/batquisition.css
+++ b/source-css/batquisition.css
@@ -169,11 +169,11 @@ a[href|="/whatamireading"] {
  background-image: url(%%whatamireading%%);
 } 
 
-a[href|="/specktopbat"] {  
+a[href|="/speckseesyou"] {  
  display: block;
  clear: none;
  float: left; 
- width: 151px;
- height: 150px;
- background-image: url(%%SpeckTopBat%%);
+ width: 68px;
+ height: 105px;
+ background-image: url(%%specksees-you%%);
 } 
