--- a/source-css/lyra.css
+++ b/source-css/lyra.css
@@ -1,3 +1,12 @@
+/* coloring */
+#header {background-color:#A4F9DD}
+#sr-header-area {background-color:#C1F2F0;border-bottom:2px solid #3DAD72}
+
+
+
+
+
+
 /* BonBon Heart */
 
 body .side a[href="http://www.reddit.com/r/BonBon"] {
