--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -2,12 +2,12 @@
 
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%backgroundground%%)  no-repeat  fixed 66% 100% !important;
+    background:  url(%%animebackground5%%)  no-repeat  fixed 66% 100% !important;
 }
 
 /* Banner image and associated height values */
  #header #header-bottom-left {
-   background: url(%%kittybanner2%%)!important;
+   background: url(%%kittybanner3%%)!important;
    background-repeat: no-repeat!important;
    background-position: 50% 100%!important;
    height: 237px; /* 237 for meat's nice banner and general banner size */
@@ -461,6 +461,7 @@ background-repeat: no-repeat;
 .flair-jeep8790:after { background-position: 0px -5400px }
 .flair-rapidfire:after { background-position: 0px -5430px }
 .flair-djturt:after { background-position: 0px -5460px }
+.flair-espieface:after { background-position: 0px -5490px }
 
 
 /* Nightmode fix for flair */
