--- a/source-css/mylittlecirclejerk.css
+++ b/source-css/mylittlecirclejerk.css
@@ -325,7 +325,7 @@ content: "% Cooler"
 }
 /*Hugs, Brony place your code of doom below here!*/
 
-a[href="/shrug"] 
+a[href="/trollshrug"] 
 {
 display: block;
 clear: none;
@@ -334,7 +334,7 @@ width: 100px;
 height: 100px;
 background-image: url(%%shrug%%)
 }
-a[href="/shrug"] {
+a[href="/trollshrug"] {
 background-position: -0px -0px
 }
 
@@ -362,6 +362,84 @@ a[href="/racialcleansing"]
 }
 a[href="/racialcleansing"] {
  background-position: -0px -0px
+}
+
+a[href="/moxshrug"] 
+{
+ display: block;
+ clear: none;
+ float: left;
+ width: 250px;
+ height: 268px;
+ background-image: url(%%ShrugEmote%%)
+}
+a[href="/moxshrug"] {
+ background-position: -0px -0px
+}
+
+a[href="/doge"] 
+{
+ display: block;
+ clear: none;
+ float: left;
+ width: 250px;
+ height: 177px;
+ background-image: url(%%ShrugEmote%%)
+}
+a[href="/doge"] {
+ background-position: -0px -268px
+}
+
+a[href="/danshrug"] 
+{
+ display: block;
+ clear: none;
+ float: left;
+ width: 250px;
+ height: 250px;
+ background-image: url(%%ShrugEmote%%)
+}
+a[href="/danshrug"] {
+ background-position: -0px -445px
+}
+
+a[href="/dinoshrug"] 
+{
+ display: block;
+ clear: none;
+ float: left;
+ width: 250px;
+ height: 250px;
+ background-image: url(%%ShrugEmote%%)
+}
+a[href="/dinoshrug"] {
+ background-position: -0px -695px
+}
+
+a[href="/twilyshrug"] 
+{
+ display: block;
+ clear: none;
+ float: left;
+ width: 250px;
+ height: 250px;
+ background-image: url(%%ShrugEmote%%)
+}
+a[href="/twilyshrug"] {
+ background-position: -0px -945px
+}
+
+a[href="/scootsshrug"] 
+{
+ display: block;
+ clear: none;
+ float: left;
+ width: 250px;
+ height: 250px;
+ background-image: url(%%ShrugEmote%%)
+}
+a[href="/scootsshrug"] {
+ background-position: -0px -1195px
 }
 
 a[href="/D:"] 
@@ -413,7 +491,7 @@ a[href="/thisisanemote"]
     background-image: url(%%thisisanemote%%)
     }
 
-a[href="/hugs"] 
+a[href="/pinkiehugs"] 
 {
     display: block;
     clear: none;
@@ -422,7 +500,7 @@ a[href="/hugs"]
     height: 100px;
     background-image: url(%%hugs%%)
     }
-a[href="/hugs"] {
+a[href="/pinkiehugs"] {
     background-position: -0px -0px
     }
 
