--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -421,7 +421,7 @@ a[href|="/theclopping"] {
     background-position: -3009px -0px;
     width: 126px
     }
-a[href|="/trixnazi"] {
+a[href|="/trixnazi"], a[href|="/buttonwut"] {
     display: block;
     clear: none;
     float: left;
@@ -431,6 +431,10 @@ a[href|="/trixnazi"] {
 a[href|="/trixnazi"] {
     background-position: -0px -0px;
     width: 137px
+    }
+a[href|="/buttonwut"] {
+    background-position: -137px -0px;
+    width: 142px
     }
 
 /***********MLP-XLRG*************/
