--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -2,10 +2,10 @@ div.titlebox span.word {
     display: none;
     }
 div.titlebox .subscribers span.number:after {
-    content: " Moon Fillies"
+    content: " Fillies"
     }
 div.titlebox .users-online span.number:after {
-    content: " Mooning Each Other"
+    content: " Checking out Braeburns's sweet apples"
     }
 
 
