--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -118,10 +118,10 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-hat%%);
+ background:url(%%applehat%%);
  width:60px;
  height:60px;
- margin-top:-30px;
+ margin-top:-35px;
  margin-left:0px;
  margin-bottom:0px;
  margin-right:-40px;
